--- a/themes/portDB/layouts/partials/header.html
+++ b/themes/portDB/layouts/partials/header.html
@@ -13,7 +13,7 @@
 <!-- Latest compiled and minified JavaScript -->
 <script src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></script>
 <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
-<link rel='stylesheet' href='/static/site.css' />
+<link rel='stylesheet' href='/site.css' />
 
 </head>
 <body >
