--- a/themes/portDB/layouts/index.html
+++ b/themes/portDB/layouts/index.html
@@ -1,5 +1,16 @@
 {{ partial "header.html" . }}
 
+<div class="container-fluid">
+    <div class="container">
+      <div class='bodybox'>
+
 Welcome to portDB!
+
+</div>
+</div>
+</div>
+
+
+
 
 {{ partial "footer.html" . }}
