--- a/themes/portDB/layouts/partials/footer.html
+++ b/themes/portDB/layouts/partials/footer.html
@@ -1,8 +1,7 @@
 <footer>
     <div class='container'>
-        Built by <a href='http://yaleman.org/'>James Hodgkinson</a>
+        Built by <a href='https://yaleman.org/'>James Hodgkinson</a>
           | <a href='/about'>About</a>
-          |  <a href='/contributing'>Want to help?</a>
     </div>
 </footer>
 
