--- a/themes/portDB/layouts/index.html
+++ b/themes/portDB/layouts/index.html
@@ -1,15 +1,9 @@
 {{ partial "header.html" . }}
 
-<div class="container-fluid">
-    <div class="container">
-      <div class='bodybox'>
 
-Welcome to portDB!
-
-</div>
-</div>
-</div>
-
+{{ range first 5 (where .Data.Pages "Title" "About") }}
+   {{ .Content }}
+{{ end }}
 
 
 
