--- a/themes/portDB/layouts/partials/header.html
+++ b/themes/portDB/layouts/partials/header.html
@@ -38,3 +38,8 @@
         </div><!--/.navbar-collapse -->
       </div>
     </div>
+    <div class="page-header">
+      <div class="container">
+        <h1>{{ .Title }}</h1>
+      </div>
+    </div>
