--- a/themes/portDB/layouts/_default/list.html
+++ b/themes/portDB/layouts/_default/list.html
@@ -2,12 +2,7 @@
 <section id="article-listing">
 <article  itemtype="http://schema.org/Blog">
 
-		<!-- <h1 class="list-title">{{ .Title }}</h1> -->
-{{ range .Data.Pages }}
-
-    <li>    <a href="{{ .RelPermalink }}">{{ .Title }}{{ if .Draft }} #Draft{{ end }}</a>   </li>	
-
-{{ end }}
+{{ range .Data.Pages }}<li><a href="{{ .RelPermalink }}">{{ .Title }}{{ if .Draft }} #Draft{{ end }}</a></li>{{ end }}
 
 </article>
 </section>
