--- a/themes/portDB/layouts/partials/footer.html
+++ b/themes/portDB/layouts/partials/footer.html
@@ -1,6 +1,6 @@
 <footer>
     <div class='container'>
-        Built by <a href='<https></https>://yaleman.org/'>James Hodgkinson</a>
+        Built by <a href='https://yaleman.org/'>James Hodgkinson</a>
     </div>
 </footer>
 
