--- a/themes/Just-Read/templates/index.html
+++ b/themes/Just-Read/templates/index.html
@@ -23,6 +23,6 @@
 Please feel free to add information, by emailing me at <a href="mailto:yaleman@ricetek.net">yaleman@ricetek.net</a> or <a href="https://github.com/yaleman/portdb.yaleman.org/issues">log an issue on GitHub</a>.
 </div>
 
-
+{% include 'metadata.html' %}
 </div>
 {% endblock content %}
